--- a/ACC/Views/Member/PartialViews/_UpdateMemberPartialView.cshtml
+++ b/ACC/Views/Member/PartialViews/_UpdateMemberPartialView.cshtml
@@ -1,4 +1,5 @@
-﻿@using ACC.ViewModels.MemberVM.MemberVM
+﻿@using ACC.ViewModels.MemberVM
+@using ACC.ViewModels.MemberVM.MemberVM
 @model InsertMemberVM
 
 @{
@@ -13,10 +14,9 @@
             <span id="memberInitials">@(Model?.Email?[0].ToString().ToUpper() ?? "N/A")</span>
         </div>
         <div class="member-info">
-            <h5 id="memberName">@(Model?.Email.Split("@")[0] ?? "N/A")</h5>
-            <p class="text-muted" id="memberPhone">No phone number</p>
-            <input type="email" disabled id="memberEmail" class="form-control" value="@Model?.Email" />
-            <span class="status-badge">@(Model?.Status)</span>
+            <h5 id="memberName">@(Model?.FirstName + " " + Model?.LastName)</h5>
+            <p class="text-muted" id="memberPhone">@Model?.MobilePhone</p>
+            <input style="font-size:15px" type="email" disabled id="memberEmail" class="form-control" value="@Model?.Email" />
         </div>
         <button id="closePanel" class="close-btn"><i class="bi bi-x"></i></button>
     </div>
@@ -56,15 +56,9 @@
             }
         </select>
 
-        <label>Status</label>
-        <p id="memberStatus" class="form-control">@Model?.Status</p>
-
-        
-
         <hr>
 
-        @* <h6 class="text-muted">Projects</h6>
-        <p class="text-muted">0 projects</p> *@
+ 
 
         <div class="mt-3">
             <button id="updateMemberBtn" class="btn btn-primary">Update Member</button>
